fix: zoom on mobile

--- a/sakura-bloom/css/main.css
+++ b/sakura-bloom/css/main.css
@@ -309,6 +309,7 @@ p {
   }
   .content--contentWrapper {
     width: 48.27586%;
+    top: 15%;
   }
   .content--contentWrapper h1 {
     font-family: 'Takoyaki', Helvetica, Arial, sans-serif;
